align organizational text - issue #55

--- a/public/css/global.css
+++ b/public/css/global.css
@@ -521,10 +521,10 @@ html .btn-warning {
 .btn-last { margin-top: 10px;  margin-bottom: 38px; }
 .tech-title { font-size: 20px; font-weight: 400; margin-top: 35px; }
 .sector-pill { display: inline-block; margin-top: 5px; }
-.profile-logo { margin-top: 40px; margin-right: 10px; position: relative; }
+.profile-logo { margin-top: 40px; position: relative; }
 .profile-logo img { display: block; margin: 0 auto; max-height: 100px; }
 .profile-inst-det { margin: 10px auto; text-align: center; }
-.profile-inst { position: relative; }
+.profile-inst { position: relative; padding-left: 0px; }
 .profile-h { text-transform: uppercase; font-weight: 700; padding-top: 10px; }
 .profile-kp { background: #D0D0D0; margin: 10px 0px;  }
 .profile-kp img { margin-left: -29px; width: 100px; }
